# anco

./: .env  .gitignore  main.py  pyproject.toml
configs/descriptions/: anime_model.yaml
configs/prompts/: anime_recommender.yaml
core/: agent.py  config_loader.py
lab/: basic_app.py  basic_rag_qa.py  qa_with_memory.py  search_engine.py  test_streaming.py
models/: anime.py  schema.py
