[project]
name = "anco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "addict>=2.4.0",
    "bs4>=0.0.2",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "loguru>=0.7.3",
    "openai>=1.107.1",
    "pydantic>=2.11.7",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "sentence-transformers>=5.1.0",
    "uvicorn>=0.35.0",
]
